--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ button:hover {
   border: 1px solid grey;
   border-radius: 4px;
   margin-bottom: 10px;
+  margin: 0 20px;
   padding: 10px 10px;
 }
 
@@ -251,8 +252,6 @@ button:hover {
   padding-left: 8px;
 }
 
-
-
 /* service section end */
 
 /* experince section start */
@@ -308,30 +307,18 @@ h5 {
 }
 
 .project-completed-image {
-  /* position: absolute;
-  top: 4vh;
-  left: 70vw; */
   display: none;
 }
 
 .handshake {
-  /* position: absolute;
-  top: 24vh;
-  left: 68vw; */
   display: none;
 }
 
 .awards {
-  /* position: absolute;
-  top: 48vh;
-  left: 68vw; */
   display: none;
 }
 
 .business-year-image {
-  /* position: absolute;
-  top: 70vh;
-  left: 68vw; */
   display: none;
 }
 
@@ -526,18 +513,18 @@ h5 {
   font-size: 15px;
   font-weight: 400;
 }
-.bottom-section-left > div{
+.bottom-section-left > div {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   gap: 20px;
 }
-.bottom-section-left > div >div{
+.bottom-section-left > div > div {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.bottom-section-left > a{
+.bottom-section-left > a {
   margin-left: 0px;
 }
 
@@ -545,7 +532,7 @@ h5 {
   gap: 10px;
 }
 
-.email{
+.email {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -610,7 +597,7 @@ h5 {
     position: relative;
     left: 65%;
     width: 400px;
-    height: 185px;
+    height: 195px;
   }
 
   .hero-section-dialogbox-content {
@@ -655,7 +642,6 @@ h5 {
   .reputation-section-content > div {
     height: 155px;
     padding: 10px 20px 0 20px;
-
   }
 
   .reputation-section-content > div > p {
@@ -730,6 +716,7 @@ h5 {
     cursor: pointer;
     box-shadow: 0px 0px 37px -2px rgba(17, 24, 39, 0.05);
     border-radius: 4px;
+    margin: 0px;
   }
 
   .service-section > h6 {
@@ -762,11 +749,23 @@ h5 {
     height: 600px;
     padding-top: 50px;
   }
+  h5 {
+    font-size: 72px;
+  }
+
+  .left-content {
+    font-size: 24px;
+  }
+  .experience-section-left > div {
+    padding: 10px 100px 30px 30px;
+  }
 
   .experience-section-right {
     width: 400px;
-    gap: 30px;
+    gap: 50px;
+    padding: 0px;
   }
+  
 
   .experience-section-right > h3 {
     font-size: 60px;
@@ -782,8 +781,8 @@ h5 {
 
   .experience-section-left {
     position: static;
+    margin: 0;
   }
-
   .left-content {
     font-size: 24px;
     font-weight: 400;
@@ -989,7 +988,7 @@ h5 {
     justify-content: center;
     gap: 500px;
   }
-  .email{
+  .email {
     flex-direction: row;
   }
   /* bottom section end */
