--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   font-family: "Work Sans", sans-serif;
 }
 
+
 a {
   color: black;
   text-decoration: none;
@@ -192,6 +193,7 @@ h1 {
   justify-content: center;
   position: relative;
   margin-bottom: 50px;
+  padding: 0 5px;
 }
 .about-us-section > div {
   display: flex;
@@ -434,6 +436,7 @@ h5 {
   color: #c2c7d6;
 }
 
+
 .project-left-content > li:hover {
   color: #2947a9;
   cursor: pointer;
@@ -472,17 +475,20 @@ h5 {
 .project-left-content {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   gap: 20px;
+  margin: auto;
   overflow-x: scroll;
+  width: 200px;
 }
 .project-left-content::-webkit-scrollbar {
   display: none;
 }
 #selected-project {
   border-left: #2947a9 solid 5px;
-  padding-left: 20px;
+  padding-left: 16px;
   color: #2947a9;
+  font-weight: bold;
+  font-size: 18px;
 }
 .project-section-right-top > div > img,
 .project-section-right-bottom > div > img {
@@ -558,7 +564,7 @@ h5 {
   padding: 40px 0;
   margin: 0 20px;
   gap: 20px;
-  width: 80%;
+  width: 83%;
 }
 
 .bottom-blue-text {
@@ -845,6 +851,7 @@ h5 {
     box-shadow: 0px 0px 37px -2px rgba(17, 24, 39, 0.05);
     border-radius: 4px;
     margin: 0px;
+    transition: all 0.6s ease-out;
   }
 
   .service-section > h6 {
@@ -942,7 +949,7 @@ h5 {
   .project-section-right {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 60px;
   }
 
   .project-right-content > h6 {
